spade-tests/src/snapshots/spade_tests__hir_lowering__tests__incorrect_stage_count_only_one.snap
---
source: spade-tests/src/hir_lowering.rs
---
pipeline(2) pipe(clk: clock) -> bool {
    reg;
        true
}


error: Pipeline depth mismatch. Expected 1 got 2
  ┌─ testinput:1:10
  │
1 │ pipeline(2) pipe(clk: clock) -> bool {
  │          ^ Found 1 stages
  │
  = note: Expected: 1
               Got: 2
